[gd_scene load_steps=26 format=3 uid="uid://b177ct8eucq0r"]

[ext_resource type="Script" path="res://top_down/DiceRolling/RigidBody2DDice.gd" id="1_nhhhx"]
[ext_resource type="Texture2D" uid="uid://c33l7w8ot6nf7" path="res://assets/test_dice/dicce.png" id="2_06dit"]
[ext_resource type="Script" path="res://top_down/DiceRolling/Dice.gd" id="3_sa8yh"]
[ext_resource type="Texture2D" uid="uid://hv3e1knwkgnf" path="res://assets/numbers/numbers.png" id="4_ac7li"]
[ext_resource type="Texture2D" uid="uid://cjg2mhnm8dv8q" path="res://assets/customs/colored-transparent_packed.png" id="5_lhlip"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qij8a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b704l"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hoyr2"]
atlas = ExtResource("2_06dit")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6hwq"]
atlas = ExtResource("2_06dit")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ohy"]
atlas = ExtResource("2_06dit")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdtup"]
atlas = ExtResource("2_06dit")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ks2"]
atlas = ExtResource("2_06dit")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgexo"]
atlas = ExtResource("2_06dit")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq0ou"]
atlas = ExtResource("2_06dit")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tewrk"]
atlas = ExtResource("2_06dit")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyacn"]
atlas = ExtResource("2_06dit")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojc0e"]
atlas = ExtResource("2_06dit")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7kon"]
atlas = ExtResource("2_06dit")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8c2"]
atlas = ExtResource("2_06dit")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0umtr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoyr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6hwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ohy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdtup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ks2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgexo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq0ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tewrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyacn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojc0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7kon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8c2")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ge2mi"]
lifetime_randomness = 0.27
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(5, 5, 1)
gravity = Vector3(0, -98, 0)
damping_max = 1.0
scale_max = 2.0
turbulence_enabled = true

[sub_resource type="Animation" id="Animation_v2fix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_1w33b"]
resource_name = "roll"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"roll_die"
}, {
"args": [],
"method": &"set_die_gfx"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Number:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(-2, -0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Dice")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"random_frame"
}, {
"args": [],
"method": &"random_frame"
}, {
"args": [],
"method": &"random_frame"
}, {
"args": [],
"method": &"random_frame"
}, {
"args": [],
"method": &"random_frame"
}, {
"args": [],
"method": &"random_frame"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Dice:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 2), Vector2(3, -2), Vector2(-3, 0), Vector2(2, -1), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Dice:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(2, -2, 0.5),
"update": 0,
"values": [0.0, 6.28319, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5v6g"]
_data = {
"RESET": SubResource("Animation_v2fix"),
"roll": SubResource("Animation_1w33b")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2n5up"]
atlas = ExtResource("5_lhlip")
region = Rect2(608, 192, 16, 16)

[node name="RigidBody2DDice" type="RigidBody2D" node_paths=PackedStringArray("die_graphic", "die_number")]
position = Vector2(149, 127)
collision_layer = 3072
collision_mask = 1024
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_qij8a")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 5.0
script = ExtResource("1_nhhhx")
die_graphic = NodePath("Dice")
die_number = NodePath("Number")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b704l")

[node name="Dice" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0umtr")
animation = &"roll"
script = ExtResource("3_sa8yh")

[node name="Number" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0.733333, 0, 1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_ac7li")
hframes = 12

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
self_modulate = Color(1, 0.968627, 0.360784, 1)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ge2mi")
lifetime = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5v6g")
}

[node name="SelectedDieGfx" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 0.368627, 1)
scale = Vector2(1.25, 1.25)
texture = SubResource("AtlasTexture_2n5up")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
